# Synthetic-Interface-Generator

./: ARFILE.ar  DEMO.interface  DEMO.pnml  DEMO.prj  DEMO.signature  LICENSE  README.md  V1__1_0__Server_V2__1_0__Client_adapter.owfn  V1__1_0__Server_V2__1_0__Client_composed-partner.dot  V1__1_0__Server_V2__1_0__Client_composed-partner.owfn  V1__1_0__Server_V2__1_0__Client_composed.owfn  V1__1_0__Server_V2__1_0__Client_composed.owfn.ig.og  V1__1_0__Server_V2__1_0__Client_composed.owfn.ig.out  V1__1_0__Server_V2__1_0__Client_composed.owfn.ig.pn  V1__1_0__Server_V2__1_0__Client_composed.owfn.ig.stg  conversion.py  experiments.py  experiments1.csv  experiments2.csv  experiments3.csv  generation.pnml  generator.py  modifications.py  newplots.py  old_results.csv  original_experiments.py  plots.py  results copy.csv  results.csv  stateyasper.py  test.pntml  test.py
demo/: V1.interface  V1.prj  V1.signature  V2.interface  V2.signature
results/: README.md  equal_result_multipel_mod.csv  equal_results.csv  experiments1.csv  experiments2.csv  experiments3.csv  experiments4.csv  multiple_modifications_results.csv  result_remarks.txt  varying_in_out.csv
templates/: ar.jinja  interface.jinja  params.jinja  prj copy.jinja  prj.jinja  signature.jinja
test/: V1.interface  V1.prj  V1.signature  V2.interface  V2.prj  V2.signature  ZARFILE.ar  generation.interface  generation.prj  generation.signature  generation.types  ip.params  v1-original-server.pnml  v2-modified-server.pnml
test/v1/: V1.interface  V1.prj  V1.signature  ip.params
test/v1/src-gen/DYNAMICS/openNetTask/: V1__1_0__Client.owfn  V1__1_0__Server.owfn
test/v1/src-gen/PNetModel/PNet/: V1_for_interface_V1.pnet
test/v1/src-gen/uml/umlTask/: V1_V1_complete.plantuml  V1_V1_noactions.plantuml  V1_V1_noactions_noselftrans.plantuml  (+1 more)
test/v2/: V2.interface  V2.prj  V2.signature  ip.params
v1/: V1.interface  V1.signature
v1/src-gen/DYNAMICS/openNetTask/: V1__1_0__Client.owfn  V1__1_0__Server.owfn
v1/src-gen/DYNAMICS/stubTask/: CMakeLists.txt
v1/src-gen/DYNAMICS/stubTask/avro/: V1__1_0.avdl  V1__1_0__commands.messageinterface  V1__1_0__status.messageinterface
v1/src-gen/DYNAMICS/stubTask/components/V1__1_0__Client/: CMakeLists.txt
v1/src-gen/DYNAMICS/stubTask/components/V1__1_0__Server/: CMakeLists.txt  V1__1_0.og
v1/src-gen/PetriNetModel/PNet/: interface_V1.pnet
v1/src-gen/uml/umlTask/: V1_V1.graphml  V1_V1_complete.plantuml  V1_V1_noactions.plantuml
v2/: V2.interface  V2.prj  V2.signature  client_sever.ar
v2/src-gen/DYNAMICS/openNetTask/: V2__1_0__Client.owfn  V2__1_0__Server.owfn
v2/src-gen/PetriNetModel/PNet/: interface_V2.pnet
v2/src-gen/uml/umlTask/: V2_V2.graphml  V2_V2_noactions.plantuml  V2_V2_noselftrans.plantuml
(+83 files in other folders)
